# linux-ubuntu-utils

./: Makefile  README.md  apt-sources.list.txt
cmake/app/: CMakeLists.txt  Makefile  main.cpp
cmake/cmakemodule/: CMakeLists.txt  main.cpp
cmake/cmakemodule/dll/: CMakeLists.txt
cmake/cmakemodule/modules/cmake/: FindDLL.cmake
cmake/findpackage/: CMakeLists.txt  README.md  mainwidget.cpp
cmake/findpackageex/: CMakeLists.txt  README.md  main.cpp  mainwidget.h
linux/: bash.txt  find.txt  include_dirs  man.txt  vim.sh  vim.txt  vimrc.txt
mysqlcppconn/: README.md  db.sql
mysqlcppconn/log/: CMakeLists.txt  Makefile  README.md  main.cpp
mysqlcppconn/prepared_statement/: CMakeLists.txt  main.cpp
mysqlcppconn/query/: Makefile  main.cpp
mysqlcppconn/transaction/: main.cpp
pkg-config/: CMakeLists.txt  CMakeLists.txt-with-find-package  main.cpp
pkg-config/dll/: dll.cpp  dll.h
pkg-config/libPKG/: CMakeLists.txt  libPKG.cpp
pkg-config/modules/cmake/: FindDLL.cmake  FindLIBPKG.cmake
pkg-config/modules/libPKG/include/: libPKG.h
pkg-config/modules/pkg-config/: DLL.pc  libPKG.pc
qt/: README.md  boost.txt  build.sh  docker.txt  mysql.txt  mysql_connector_c++_V1.0.1.docx  qt5.install.sh  qt5.install.txt  qt6-faq.txt
